--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "autoprefixer": "^10.4.17",
+    "framer-motion": "^11.0.5",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
